redone UI API, added server list

--- a/index.html
+++ b/index.html
@@ -17,10 +17,6 @@
 		<div id="chunks"></div>
 		<div id="pointer"></div>
 		<div id="pointer2"></div>
-		<div id="dirtbg">
-			<div id="dirtbgmsg"></div>
-			<div id="dirtbgbuttons"></div>
-		</div>
 		<item id="draggingNode"></item>
 		<div id="hotbar">
 			<item></item><item></item><item></item>
@@ -29,7 +25,20 @@
 			<div id="slot"></div>
 		</div>
 		<div id="chat"></div>
-		<div id="ui" style="display:none">
+		<div id="inventory">
+			<item></item><item></item><item></item>
+			<item></item><item></item><item></item>
+			<item></item><item></item><item></item>
+			<item></item><item></item><item></item>
+			<item></item><item></item><item></item>
+			<item></item><item></item><item></item>
+			<item></item><item></item><item></item>
+			<item></item><item></item><item></item>
+			<item></item><item></item><item></item>
+			<div style="height:2rem;width:100%"></div>
+			<item></item><item></item><item></item>
+			<item></item><item></item><item></item>
+			<item></item><item></item><item></item>
 		</div>
 	</body>
 </html>
