--- a/iframe/index.html
+++ b/iframe/index.html
@@ -176,7 +176,7 @@
 	const Blocks = {}, Items = {}, Entities = {}
 	let W2 = 0, H2 = 0, SCALE = 1, t = 0
 	const {abs, min, max, round, floor, ceil, ifloat, fclamp, sqrt, cbrt, atan2, sign, sin, cos, tan, PI, PI2 = PI * 2, } = Math
-	const
+	const LBUTTON = 0, RBUTTON = 2, MBUTTON = 1,
 		KEY_A = 65, KEY_B = 66, KEY_C = 67, KEY_D = 68, KEY_E = 69, KEY_F = 70,
 		KEY_G = 71, KEY_H = 72, KEY_I = 73, KEY_J = 74, KEY_K = 75, KEY_L = 76,
 		KEY_M = 77, KEY_N = 78, KEY_O = 79, KEY_P = 80, KEY_Q = 81, KEY_R = 82,
