--- a/iframe/index.html
+++ b/iframe/index.html
@@ -198,7 +198,7 @@
 	let ticks = 0, world = '', gx = 0, gy = 0
 	let cam = {x: 0, y: 0, z: 2}, mx = 0, my = 0
 	let DataReader, DataWriter
-	const VERSION = 'alpha 4 preview'
+	const VERSION = 'alpha 4'
 </script>
 <script type="module">
 	import "./bitfield.js"
