--- a/iframe/index.html
+++ b/iframe/index.html
@@ -100,22 +100,22 @@
 			this.scale(S,-S)
 		}
 		//Canvas API sucks
-		C.image = function(img, x, y, w = img.w, h = img.h){
+		C.image = function(img, x, y, w = img.w, h = img.h, ix = 0, iy = 0, ow = img.w, oh = img.h){
 			if(w > 0){
 				if(h < 0){
-					this.drawImage(img.img, img.x, img.y, img.w, img.h, x, y, w, h)
+					this.drawImage(img.img, img.x + ix, img.y + iy, ow, oh, x, y, w, h)
 				}else{
 					this.scale(1,-1)
-					this.drawImage(img.img, img.x, img.y, img.w, img.h, x, -y, w, -h)
+					this.drawImage(img.img, img.x + ix, img.y + iy, ow, oh, x, -y, w, -h)
 					this.scale(1,-1)
 				}
 			}else if(h < 0){
 				this.scale(-1,1)
-				this.drawImage(img.img, img.x, img.y, img.w, img.h, -x, y, -w, h)
+				this.drawImage(img.img, img.x + ix, img.y + iy, ow, oh, -x, y, -w, h)
 				this.scale(-1,1)
 			}else{
 				this.scale(-1,-1)
-				this.drawImage(img.img, img.x, img.y, img.w, img.h, -x, -y, -w, -h)
+				this.drawImage(img.img, img.x + ix, img.y + iy, ow, oh, -x, -y, -w, -h)
 				this.scale(-1,-1)
 			}
 		}
@@ -155,6 +155,36 @@
 		return (f >> 0) + (x - f)
 	}
 	for(const n of [HTMLCollection, NodeList])Object.setPrototypeOf(n.prototype, Array.prototype)
+	Object.defineProperties(Array.prototype, {
+		winner: {enumerable: false, value(pred){
+			let best = -Infinity
+			let winner = null
+			const length = this.length
+			for(let i = 0; i < length; i++){
+				const a = this[i], score = pred(a, i, this)
+				if(score > best){
+					best = score
+					winner = a
+				}
+			}
+			return winner
+		}},
+		remove: {enumerable: false, value(a){
+			let i = 0, j = 0
+			for(; j < this.length; j++){
+				if(j > i)this[i] = this[j]
+				if(this[i] != a)i++
+			}
+			this.length = i
+			return this
+		}},
+		mutmap: {enumerable: false, value(fn){
+			const len = this.length
+			for(let i = 0; i < len; i++)
+				this[i] = fn(this[i])
+			return this
+		}}
+	})
 	const Can = (w = 100, h = 100) => {
 		const c = document.createElement('canvas').getContext('2d')
 		c.canvas.width = w; c.canvas.height = h
@@ -164,17 +194,9 @@
 	}
 	const Blocks = {}, Items = {}, Entities = {}
 	const BlockIDs = [], ItemIDs = [], EntityIDs = []
-	class Block{static id=-1;static savedata=null;static savedatahistory=[]}
-	class Item{constructor(a){this.count=a&255;this.name=''}static id=-1;static savedata=null;static savedatahistory=[]}
-	class Entity{constructor(x,y){
-		this.ix = this.x = x
-		this.iy = this.y = y
-		this.dx = this.dy = 0
-		this.state = 0
-		this.f = PI / 2
-	}static id=-1;static savedata=null;static savedatahistory=[]}
+	let Block, Item, Entity, Particle
 	let W2 = 0, H2 = 0, SCALE = 1
-	const {abs, min, max, round, floor, ceil, ifloat, fclamp, sqrt, cbrt, atan2, sign, sin, cos, tan, PI, PI2 = PI * 2, } = Math
+	const {random, abs, min, max, round, floor, ceil, ifloat, fclamp, sqrt, cbrt, atan2, sign, sin, cos, tan, PI, PI2 = PI * 2, } = Math
 	const LBUTTON = 0, RBUTTON = 2, MBUTTON = 1,
 		KEY_A = 65, KEY_B = 66, KEY_C = 67, KEY_D = 68, KEY_E = 69, KEY_F = 70,
 		KEY_G = 71, KEY_H = 72, KEY_I = 73, KEY_J = 74, KEY_K = 75, KEY_L = 76,
