forgot to change version name

--- a/iframe/index.html
+++ b/iframe/index.html
@@ -237,7 +237,7 @@
 		return a
 	}
 	Function.returns = v => () => v
-	const VERSION = 'alpha 4'
+	const VERSION = 'alpha 5 (maybe)'
 </script>
 <script type="module">
 	import "./bitfield.js"
