--- a/iframe/index.html
+++ b/iframe/index.html
@@ -15,22 +15,22 @@
 	const _filecache = Object.create(null)
 	const _c = document.createElement('canvas')
 	const _texture = class Texture{
-		constructor(img, x, y, w, h){ this.img = img; this.x = x; this.y = y; this.w = w; this.h = h; this._pattern = null }
-		crop(x, y, w, h){ return new _texture(this.img, this.x + x, this.y + y, w, h) }
-		at(x, y){ return new _texture(this.img, this.x + x * TEX_SIZE, this.y + y * TEX_SIZE, TEX_SIZE, TEX_SIZE) }
+		constructor(img, x, y, w, h){ this.canvas = img; this.x = x; this.y = y; this.w = w; this.h = h; this._pattern = null }
+		crop(x, y, w, h){ return new _texture(this.canvas, this.x + x, this.y + y, w, h) }
+		at(x, y){ return new _texture(this.canvas, this.x + x * TEX_SIZE, this.y + y * TEX_SIZE, TEX_SIZE, TEX_SIZE) }
 		pattern(rep = ''){
 			if(this._pattern)return this._pattern
 			const c = document.createElement('canvas')
 			const ctx = c.getContext('2d')
-			if(this.img.complete === false){
-				this.img.addEventListener('load', () => {
+			if(this.canvas.complete === false){
+				this.canvas.addEventListener('load', () => {
 					c.width = this.w; c.height = this.h
-					ctx.drawImage(this.img, this.x, this.y, this.w, this.h, 0, 0, this.w, this.h)
+					ctx.drawImage(this.canvas, this.x, this.y, this.w, this.h, 0, 0, this.w, this.h)
 					this._pattern = ctx.createPattern(c, rep)
 				})
 			}else{
 				c.width = this.w; c.height = this.h
-				ctx.drawImage(this.img, this.x, this.y, this.w, this.h, 0, 0, this.w, this.h)
+				ctx.drawImage(this.canvas, this.x, this.y, this.w, this.h, 0, 0, this.w, this.h)
 				this._pattern = ctx.createPattern(c, rep)
 			}
 			return this
@@ -58,9 +58,6 @@
 		}
 	}
 	const TEX_SIZE = 16
-	CanvasRenderingContext2D.prototype.texture = function(x, y, w = this.width, h = this.height){
-		return new _texture(this.canvas, x, y, w, h)
-	}
 	;(C => {
 		/**
 		 * Note on performance
@@ -92,7 +89,7 @@
 			_fillTxt.call(this, t, x*S, -y*S, maxW*S)
 			this.scale(S,-S)
 		}
-		C.strokeText = function(t, x, y, s, maxW = Infinity){
+		C.strokeText = function(t, x, y, s, maxW = 2147483647){
 			s *= .001
 			const S = 1/s
 			this.scale(s, -s)
@@ -103,19 +100,19 @@
 		C.image = function(img, x, y, w = img.w, h = img.h, ix = 0, iy = 0, ow = img.w, oh = img.h){
 			if(w > 0){
 				if(h < 0){
-					this.drawImage(img.img, img.x + ix, img.y + iy, ow, oh, x, y, w, h)
+					this.drawImage(img.canvas, img.x + ix, img.y + iy, ow, oh, x, y, w, h)
 				}else{
 					this.scale(1,-1)
-					this.drawImage(img.img, img.x + ix, img.y + iy, ow, oh, x, -y, w, -h)
+					this.drawImage(img.canvas, img.x + ix, img.y + iy, ow, oh, x, -y, w, -h)
 					this.scale(1,-1)
 				}
 			}else if(h < 0){
 				this.scale(-1,1)
-				this.drawImage(img.img, img.x + ix, img.y + iy, ow, oh, -x, y, -w, h)
+				this.drawImage(img.canvas, img.x + ix, img.y + iy, ow, oh, -x, y, -w, h)
 				this.scale(-1,1)
 			}else{
 				this.scale(-1,-1)
-				this.drawImage(img.img, img.x + ix, img.y + iy, ow, oh, -x, -y, -w, -h)
+				this.drawImage(img.canvas, img.x + ix, img.y + iy, ow, oh, -x, -y, -w, -h)
 				this.scale(-1,-1)
 			}
 		}
@@ -148,6 +145,11 @@
 		}
 		Object.defineProperty(C, 'fillStyle', {get: getFillStyle, set(a){this.setFillStyle(a._pattern||a)}})
 		Object.defineProperty(C, 'strokeStyle', {get: getStrokeStyle, set(a){this.setStrokeStyle(a._pattern||a)}})
+		C.resize = function(w, h){
+			this.canvas.width = this.w = w
+			this.canvas.height = this.h = h
+		}
+		C.crop = function(x, y, w, h){ return new _texture(this.canvas, x, y, w, h) }
 	})(CanvasRenderingContext2D.prototype)
 	Math.fclamp = (a, b = 1) => a < 0 ? 0 : (a > b ? b : a)
 	Math.ifloat = x => {
@@ -187,16 +189,17 @@
 	})
 	const Can = (w = 100, h = 100) => {
 		const c = document.createElement('canvas').getContext('2d')
-		c.canvas.width = w; c.canvas.height = h
+		c.canvas.width = c.w = w; c.canvas.height = c.h = h
 		//Possible consideration: filling the array with
 		c.transforms = []
+		c.x = c.y = 0
 		return c
 	}
 	const Blocks = {}, Items = {}, Entities = {}
 	const BlockIDs = [], ItemIDs = [], EntityIDs = []
 	let Block, Item, Entity, Particle
 	let W2 = 0, H2 = 0, SCALE = 1
-	const {random, abs, min, max, round, floor, ceil, ifloat, fclamp, sqrt, cbrt, atan2, sign, sin, cos, tan, PI, PI2 = PI * 2, } = Math
+	const {random, abs, min, max, round, floor, ceil, ifloat, fclamp, sqrt, cbrt, atan2, sign, sin, cos, tan, PI, PI2 = PI * 2, imul } = Math
 	const mac = navigator.platform.startsWith('Mac')
 	const LBUTTON = 0, RBUTTON = 2, MBUTTON = 1,
 		KEY_A = 65, KEY_B = 66, KEY_C = 67, KEY_D = 68, KEY_E = 69, KEY_F = 70,
